fix header font and alignement

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,8 @@
+body {
+	text-align: center;
+	font-family: Arial;
+}
+
 #sudoku {
 	font-size: 0;
 	text-align: center;
